# registrationViewer

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  mypy.ini  pyrightconfig.json  tmp.py
helloWorld/: CMakeLists.txt  helloWorld.py
helloWorld/Resources/UI/: helloWorld.ui
helloWorld/registrationViewerLib/: utils.py
registrationViewer/: CMakeLists.txt  registrationViewer.py
registrationViewer/Resources/: .slicerrc_copy.py
registrationViewer/Resources/Data/brain/: rigid.h5
registrationViewer/Resources/UI/: registrationViewer.ui
registrationViewer/registrationViewerLib/: baseline_loading.py  crosshairs.py  drop_data_loading.py  legacy_functions.py  utils.py  view_logic.py
